<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityA"
    android:orientation="vertical"
    android:background="@color/background">



    <TextView
        android:id="@+id/welcomeID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/maven_pro"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />


    <Button
        android:id="@+id/mAbout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/about"
        android:padding="5dp"
        android:fontFamily="@font/maven_pro"
        android:textStyle="bold"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="@+id/welcomeID"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="@+id/welcomeID"
        app:layout_constraintTop_toBottomOf="@+id/welcomeID"
        android:layout_marginTop="64dp"
        android:background="@drawable/border_button"/>

    <Button
        android:id="@+id/mProfile"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/border_button"
        android:fontFamily="@font/maven_pro"
        android:padding="5dp"
        android:text="@string/my_profile"
        android:textAlignment="gravity"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="@+id/welcomeID"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="@+id/welcomeID"
        app:layout_constraintTop_toBottomOf="@+id/mAbout" />

</androidx.constraintlayout.widget.ConstraintLayout>