<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityB"
    android:background="@color/background"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="0dp"
        app:elevation="2dp"
        android:elevation="3dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="4dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="16dp">

                    <ImageView
                        android:id="@+id/andela_logo"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/andelalogo2"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/andela"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:layout_marginBottom="4dp"
                        android:textColor="@android:color/white"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@+id/andela_logo"/>

                    <ImageView
                        android:id="@+id/andela_content"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_dehaze_black_24dp"/>
                </RelativeLayout>

                </LinearLayout>

            </FrameLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           >
            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/descTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/desc"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toEndOf="@+id/textTitle"
                app:layout_constraintStart_toStartOf="@+id/textTitle"
                app:layout_constraintTop_toBottomOf="@+id/textTitle" />

            <TextView
                android:id="@+id/joinUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/joinUs"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/textTitle"
                app:layout_constraintStart_toStartOf="@+id/textTitle"
                app:layout_constraintTop_toBottomOf="@+id/descTitle"
                android:layout_marginTop="64dp"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/long_desc"

                android:textAlignment="center"
                android:gravity="center_vertical"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toEndOf="@+id/joinUs"
                app:layout_constraintStart_toStartOf="@+id/joinUs"
                app:layout_constraintTop_toBottomOf="@+id/joinUs" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>